# -

./: pyproject.toml
.github/workflows/: ml_app-ci.yml
src/: __main__.py  inference.py  train.py  visualize.py
tests/: test_ml.py  test_train.py
