[tool.poetry]
name = "p4"
version = "0.1.0"
description = ""
authors = ["yuanquan0726"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^0.24.1"
matplotlib = "^3.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
sphinx = "^3.5.4"