[tool.poetry]
name = "p4"
version = "0.1.0"
description = ""
authors = ["yuanquan0726"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
ruff = "^0.6.5"
sphinx = ">=5.0"